--- a/src/html/interviews/intrvw_a_d02.html
+++ b/src/html/interviews/intrvw_a_d02.html
@@ -3,6 +3,7 @@
     <script locals>
         module.exports = {
             text: {
+                id: "a_d02",
                 title: "wir wollten das ja letzten Endes",
                 main: [
                     `Es ist ein neues System, wir müssen das System ja auch erst mal verstehen.
@@ -23,12 +24,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Dorina und Andreas S. 2"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - {{text.author}} 2"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_a&d02"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_{{text.id}}"}'></include>
         </header>
 
         <main>
