--- a/src/html/interviews/intrvw_ajm04.html
+++ b/src/html/interviews/intrvw_ajm04.html
@@ -3,6 +3,7 @@
     <script locals>
         module.exports = {
             text: {
+                id: "ajm04",
                 title: "es war wirklich so",
                 main: [
                     `Beim Einkaufen: Manche Verkäuferin war so nett, aber manche Verkäuferin gibst du Geld, sie sagt, sie rufen mit Absicht zu jemanden „ich habe Geld von Neger. Ist es richtiges Geld oder nicht?“ und hörst du von anderen „schmeiß weg“ oder andere sagt „ach, mir ist egal“. […] Schlimm war es. Wenn man es heute den Leuten erzählt, denken sie, man fantasiert, obwohl es wirklich so war.`,
@@ -11,7 +12,7 @@
                 authorLink: "../bio.html#munjunga",
                 audioFilePath: "/public/audio/AJM_04.mp3",
                 imageFilePath: "/public/images/AJM_04.jpg",
-                imageCaption: "Rückkehr nach Angola, Eberswalde 1990. Aus dem Archiv von Augusto Jone Munjunga",
+                imageCaption: "Kaufhalle. Bildcredit: Bundesarchiv, Bild 183-M0106-0014 / CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_ks01.html",
                 nextLink: "intrvw_dm01.html",
@@ -20,12 +21,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Augusto Jone Munjunga 4"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - {{text.author}} 4"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ajm04"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_{{text.id}}"}'></include>
         </header>
 
         <main>
