--- a/src/html/virtual-exhibits/ve5.html
+++ b/src/html/virtual-exhibits/ve5.html
@@ -39,7 +39,7 @@
                     >
                         <include
                             src="./partials/interview_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/DM_01.mp3", "title": "wie ein Theater beobachtet"}'
+                            locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/DM_01.mp3", "title": "wie ein Theater beobachtet"}'
                         >
                         </include>
                     </div>
@@ -99,7 +99,7 @@
                                 <div class="z-40 mx-auto w-2/5 md:w-1/5 md:translate-y-1/2">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"audioFilePath": "../../../public/audio/MM_02.mp3", "title": ""}'
+                                        locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/MM_02.mp3", "title": ""}'
                                     >
                                     </include>
                                 </div>
@@ -114,7 +114,7 @@
                                 <div class="mx-auto w-full md:-translate-x-[15%] md:-translate-y-1/2">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"audioFilePath": "../../../public/audio/KS_01.mp3", "title": "für mich war das ein Unfall"}'
+                                        locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/KS_01.mp3", "title": "für mich war das ein Unfall"}'
                                     >
                                     </include>
                                 </div>
@@ -130,7 +130,7 @@
                             <div class="mx-auto w-2/3 pt-12 md:mr-[100%] md:w-4/5 md:-translate-y-full md:pt-0">
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"audioFilePath": "../../../public/audio/J_R_03.mp3", "title": "Hoyerswerda hat den Anfang gemacht"}'
+                                    locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/J_R_03.mp3", "title": "Hoyerswerda hat den Anfang gemacht"}'
                                 >
                                 </include>
                             </div>
@@ -160,7 +160,7 @@
                         <div class="mx-auto w-4/5 md:-translate-y-1/2">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/B_L_02.mp3", "title": "Heimat hin oder her"}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/B_L_02.mp3", "title": "Heimat hin oder her"}'
                             >
                             </include>
                         </div>
@@ -182,7 +182,7 @@
                         <div class="mx-auto w-1/2 pt-8 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/MM_03.mp3", "title": ""}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/MM_03.mp3", "title": ""}'
                             >
                             </include>
                         </div>
@@ -195,7 +195,7 @@
                         <div class="mx-auto w-3/5 pt-8 md:mr-auto md:w-4/5 md:-translate-y-[250%] md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/DM_04.mp3", "title": "ich war ein richtiger Sklave"}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/DM_04.mp3", "title": "ich war ein richtiger Sklave"}'
                             >
                             </include>
                         </div>
