--- a/src/html/interviews/intrvw_a_d06.html
+++ b/src/html/interviews/intrvw_a_d06.html
@@ -3,9 +3,10 @@
     <script locals>
         module.exports = {
             text: {
+                id: "a_d06",
                 title: "das wollten wir doch nicht",
                 main: [
-                    `Erstaunlicherweise waren ja auch zum Anfang … standen auch die Älteren da und haben mit gegrölt … aber wo sie mitgekriegt haben, dass die ersten Sixpacks abgefackelt wurden, dass die ersten Autos da umgeworfen wurden, dass da jetzt richtig Randale losging, da sind sie alle verschwunden mit einmal. Die fanden das mit einmal blöd. Vorher standen sie auch und habe geschrienen, dass die … „Weg hier mit euch“. Und dann wo richtig los, dann waren sie auf einmal weg. Dann haben sie gesagten: „Oh ne, das wollten wir doch nicht.“ Wie war das “wollte ich doch nicht? Ich habe doch ein Streichholz in der Hand gehabt. Ich habe doch mitgezündelt, vielleicht“.`,
+                    `Erstaunlicherweise waren ja auch zum Anfang … standen auch die Älteren da und haben mit gegrölt … aber wo sie mitgekriegt haben, dass die ersten Sixpacks abgefackelt wurden, dass die ersten Autos da umgeworfen wurden, dass da jetzt richtig Randale losging, da sind sie alle verschwunden mit einmal. Die fanden das mit einmal blöd. Vorher standen sie auch und habe geschrienen, dass die … „Weg hier mit euch“. Und dann wo richtig los, dann waren sie auf einmal weg. Dann haben sie gesagten: „Oh ne, das wollten wir doch nicht.“ Wie war das “wollte ich doch nicht“? Ich habe doch ein Streichholz in der Hand gehabt. Ich habe doch mitgezündelt, vielleicht.`,
                 ],
                 author: "Dorina und Andreas S.",
                 authorLink: "../bio.html#dorinasandreass",
@@ -20,12 +21,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Dorina und Andreas S. 8"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - {{text.author}} 6"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_a&d08"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_{{text.id}}"}'></include>
         </header>
 
         <main>
