--- a/src/html/interviews/intrvw_b_l02.html
+++ b/src/html/interviews/intrvw_b_l02.html
@@ -3,6 +3,7 @@
     <script locals>
         module.exports = {
             text: {
+                id: "b_l02",
                 title: "Heimat hin oder her",
                 main: [
                     `Mit allem, was wir erlebt [haben], aber wir wollten am Ende trotzdem alle hier in Deutschland bleiben. Das heißt mit anderen Worten, gibt genug gute Leute. Wir haben es gut hier eigentlich … trotz allem … Ich meine, weil wir wahrscheinlich nicht wirklich direkt erlebt, konfrontiert, attackiert von solcher Gruppe. Da kann man wahrscheinlich von Glück reden, aber wenn du das einmal erlebst, weiß ich nicht … aber sonst kann ich nicht groß Schlechtes sagen, mir geht es wirklich gut, ich habe Glück gehabt. Wie gesagt, ich habe meine zweite Heimat. Heimat hin oder her, meine Heimat ist dort, wo meine Kinder sind. Mein Zuhause ist dort bin ich geboren, und ich hier bin ich auch gut aufgehoben, ist meine zweite Heimat. Und das ist alles gut.`,
@@ -22,12 +23,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Lam Goltzsch 1"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - {{text.author}} 1"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_b_l01"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_{{text.id}}"}'></include>
         </header>
 
         <main>
