--- a/src/html/interviews/intrvw_ia02.html
+++ b/src/html/interviews/intrvw_ia02.html
@@ -3,6 +3,7 @@
     <script locals>
         module.exports = {
             text: {
+                id: "ia02",
                 title: "was guckst du",
                 main: [
                     `Wenn du, einer alleine, oder zu zweit, wurdest du immer von Gruppen von Jugendlichen provoziert, sie selbst haben sich vorgestellt als Nachfolger von Hitler. Haben uns dann gefragt, ob wir Hitler kennen. Wir haben gesagt „Nein“. Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die sagen, die sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht gemocht.“ „Warum?“ „Weil du schwarz bist“. Man hat Angst gehabt. Das war in Berlin 1982/1983, haben wir ab und zu mal diese Gruppe immer getroffen. Wenn du alleine warst, war immer Problem abends. Ab da sind wir immer zu zweit, zu dritt gelaufen. Die haben uns dann immer so richtig angeguckt, wenn wir zurückgeguckt habe, kam dann: „Was guckst du?“ Wir waren noch jung. […] Wir haben gehört, ab und zu der oder der andere wurde zusammen geschlagen. Aber wer? Immer die Gruppen, die sagen, die sind die Nachfolger von Hitler.`,
@@ -21,12 +22,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Ibraimo Alberto 2"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - {{text.author}} 2"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ia02"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_{{text.id}}"}'></include>
         </header>
 
         <main>
