--- a/src/html/interviews/intrvw_jr01.html
+++ b/src/html/interviews/intrvw_jr01.html
@@ -3,6 +3,7 @@
     <script locals>
         module.exports = {
             text: {
+                id: "jr01",
                 title: "das ist im Osten Politik gewesen",
                 main: [
                     `Ich glaube, Ausländerfeindlichkeit ist im Osten irgendwie Politik gewesen. Im Gegensatz zum Westen hat man hier Ausländer ja schon früh separiert und aus der Gesellschaft ausgegrenzt, sodass die Einwohner der DDR kaum Kontakt mit ihnen hatten und umgekehrt. Was halt drüben in der Bundesrepublik anders gelaufen ist, von vornherein. Ich denke, deswegen ist hier die Angst vor den Fremden immer noch so präsent. Diese Angst vor ausländischen Menschen, gerade was Schwarze betrifft oder so, ist eine unbewusste Angst.
@@ -22,12 +23,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Jan K. und René K. 1"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - {{text.author}} 1"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_jr01"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_{{text.id}}"}'></include>
         </header>
 
         <main>
