--- a/src/html/interviews/intrvw_mm01.html
+++ b/src/html/interviews/intrvw_mm01.html
@@ -3,6 +3,7 @@
     <script locals>
         module.exports = {
             text: {
+                id: "mm01",
                 title: "der Rassismus wurde noch stärker",
                 main: [
                     `Wir hatten schon gewusst, dass es anders wird. Aber uns nicht vorgestellt, dass der Rassismus noch stärker, noch öffentlicher wird. Als in Deutschland die Wende kam, gab es neue Parteien. Die CDU hat immer schlecht über Ausländer gesprochen: „Unser Land wird schön, alles wird gut.“ Und das Volk hat gesagt: „Ausländer müssen raus. Jetzt können wir endlich was in unserem Land machen.“ Das Ganze war nicht so gut für uns. Und dann kam auch die NPD und die hat deutlich gesagt: „Ausländer raus. Die Ausländer nehmen uns die Arbeit weg, unsere Frauen, unsere Wohnungen. Alle Ausländer sind schlecht.“ 
@@ -21,12 +22,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Moises Mvuama 1"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - {{text.author}} 1"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_mm01"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_{{text.id}}"}'></include>
         </header>
 
         <main>
