--- a/src/html/interviews/intrvw_ot01.html
+++ b/src/html/interviews/intrvw_ot01.html
@@ -3,9 +3,10 @@
     <script locals>
         module.exports = {
             text: {
+                id: "ot01",
                 title: "es war nicht böse gemeint",
                 main: [
-                    `Die Möglichkeit hatten wir gar nicht, mit denen in Kontakt, privat in Kontakt zu kommen. Ich weiß nicht, die konnten sich ja relativ frei bewegen ... dort in diesen Gaststätten so oder zum Tanzen waren die auch da. Ich weiß nicht, ob überhaupt ... es gab wahrscheinlich nicht viel Leute, die auch so den Kontakt, privater Kontakt zu denen gesucht haben. Also die Möglichkeit, würde ich sagen, gab's bestimmt ... Ja, aber wie? Wäre vielleicht eher möglich gewesen, wenn jetzt die Familien mitgewesen wären, dass man sich vielleicht ... aber so kannst du dich ja schlecht privat mit den Männern da treffen oder so. [...] Du hattest ja gar nicht die Möglichkeit, sich kulturell miteinander irgendwo vertraut zu machen, dass die die Möglichkeit haben, sich an unsere Kultur zu gewöhnen und wir an ihre, das Verständnis einfach da ist für einander. Die wurden dann sicherlich abgestempelt alle, weil wenn was passiert ist ... und wir sind vielleicht sicherlich auch von denen abgestempelt ... einer verallgemeinert dann ganz schnell.`,
+                    `Die Möglichkeit hatten wir gar nicht, mit denen in Kontakt, privat in Kontakt zu kommen. Ich weiß nicht, die konnten sich ja relativ frei bewegen … dort in diesen Gaststätten so oder zum Tanzen waren die auch da. Ich weiß nicht, ob überhaupt … es gab wahrscheinlich nicht viel Leute, die auch so den Kontakt, privater Kontakt zu denen gesucht haben. Also die Möglichkeit, würde ich sagen, gab’s bestimmt … Ja, aber wie? Wäre vielleicht eher möglich gewesen, wenn jetzt die Familien mitgewesen wären, dass man sich vielleicht … aber so kannst du dich ja schlecht privat mit den Männern da treffen oder so. […] Du hattest ja gar nicht die Möglichkeit, sich kulturell miteinander irgendwo vertraut zu machen, dass die die Möglichkeit haben, sich an unsere Kultur zu gewöhnen und wir an ihre, das Verständnis einfach da ist für einander. Die wurden dann sicherlich abgestempelt alle, weil wenn was passiert ist … und wir sind vielleicht sicherlich auch von denen abgestempelt … einer verallgemeinert dann ganz schnell. Die Vietnamesen, die wurden eigentlich... Es gab so ein Begriff, der war auch nicht böse gemeint... naja heute ist es sowieso ein bisschen schwierig. Viele haben „Schningschnongs“ gesagt. Es gab weitere verschiedene Begriffe zum Beispiel „Fidschis“. Es klingt jetzt ganz schlimm, aber es war jetzt nicht böse gemeint oder so. Für uns gab es auch viele Begriffe. [...] Aber die Vietnamesen hat man einfach als fleißig und irgendwo nicht so auffällig... die ware nicht so auffällig, die hat man gar nicht so... die werden nicht so, negativ jetzt behaftet wie jetzt vielleicht... die Mosambikaner oder so`,
                 ],
                 author: "Dennis und Silke O.",
                 authorLink: "../bio.html#silkedenniso",
@@ -20,12 +21,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Dennis und Silke O. 1"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - {{ text.author }} 1"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ot01"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_{{ text.id }}"}'></include>
         </header>
 
         <main>
