--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -37,7 +37,7 @@
                         <div class="mx-auto w-4/5 pt-2 md:w-3/5 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/01_J_R_01.mp3", "title": ""}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/01_J_R_01.mp3", "title": ""}'
                             ></include>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                         <div class="mx-auto w-3/5 pt-8 md:w-4/5 md:pb-24 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": "die kannten keine Schwarzen"}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": "die kannten keine Schwarzen"}'
                             >
                             </include>
                         </div>
@@ -109,7 +109,7 @@
                         <div class="z-10 hidden w-full translate-y-[195%] md:block">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhaeltnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhaeltnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
                             >
                             </include>
                         </div>
@@ -120,7 +120,7 @@
                         <div class="mx-auto w-3/5 md:w-1/3">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/OT_01.mp3", "title": "es war nicht böse gemeint"}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/OT_01.mp3", "title": "es war nicht böse gemeint"}'
                             >
                             </include>
                         </div>
