--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -37,7 +37,7 @@
                         <!-- Audio "die ganze Struktur zerbrach" -->
                         <include
                             src="./partials/interview_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/01_die_ganze_Struktur_zerbrach.mp3", "title": "die ganze Struktur zerbrach"}'
+                            locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/01_die_ganze_Struktur_zerbrach.mp3", "title": "die ganze Struktur zerbrach"}'
                         >
                         </include>
                     </div>
@@ -51,7 +51,7 @@
                             <div class="h-fit md:absolute md:top-1/2 md:w-1/2 md:-translate-y-1/2">
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"audioFilePath": "../../../public/audio/02_das_nahm_ja_so_Überhand.mp3", "title": "das nahm ja so Überhand"}'
+                                    locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/02_das_nahm_ja_so_Überhand.mp3", "title": "das nahm ja so Überhand"}'
                                 >
                                 </include>
                             </div>
@@ -78,7 +78,7 @@
                         >
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/03_Besuch_bekommen.mp3", "title": "Besuch bekommen"}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/03_Besuch_bekommen.mp3", "title": "Besuch bekommen"}'
                             >
                             </include>
                         </div>
@@ -141,7 +141,7 @@
                         <div class="mx-auto w-3/5 -translate-y-1/2 md:absolute md:left-1/2 md:mx-0 md:w-5/6 md:-translate-x-1/2">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/04_das_wollten_wir_doch_nicht.mp3", "title": "das wollten wir doch nicht"}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/04_das_wollten_wir_doch_nicht.mp3", "title": "das wollten wir doch nicht"}'
                             >
                             </include>
                         </div>
@@ -171,7 +171,7 @@
                             >
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"audioFilePath": "../../../public/audio/05_A_D_08.mp3", "title": ""}'
+                                    locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/05_A_D_08.mp3", "title": ""}'
                                 >
                                 </include>
                             </div>
@@ -203,7 +203,7 @@
                         <div class="mx-auto w-3/5 md:absolute md:bottom-0 md:right-0 md:mx-0 md:w-4/5 md:translate-x-[15%]">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/06_es_gab_keine_Grenze.mp3", "title": "es gab keine Grenze"}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/06_es_gab_keine_Grenze.mp3", "title": "es gab keine Grenze"}'
                             >
                             </include>
                         </div>
